k8s-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demodash-store
  namespace: default
spec:
  selector:
    app: demodash-store
  ports:
    - name: demodash-store-http
      port: 80
      targetPort: 8080
